corrected minor spacing

--- a/css/components/_videos.scss
+++ b/css/components/_videos.scss
@@ -7,6 +7,10 @@
 
     .group {
         margin: 0 -1em;
+
+        @media (max-width: 1650px) {
+            margin: 0;
+        }
     }
 
     &-item {
